MOBI-566 component rendering span around script causing layout issues - add mobi-hidden style class
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@32291 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/0_base.css
+++ b/resources/themes/base/0_base.css
@@ -13,6 +13,7 @@
  * express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
+ 
 body{ 
     font-family: Helvetica, Arial, sans-serif;
     margin: 0;
@@ -22,3 +23,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 8px 10px; 
 }
 img{ border:none; }
+.mobi-hidden{
+    display:none !important;
+}
